--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,33 +1,21 @@
 {
     "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json",
-    "release-type": "rust",
-    "include-component-in-tag": false,
     "packages": {
-      ".": {
-        "release-type": "rust",
-        "package-name": "user-management-system",
-        "include-component-in-tag": false
-      },
       "user-lib": {
-        "release-type": "rust",
-        "package-name": "user-lib"
+        "release-type": "rust"
       },
       "user-cli": {
-        "release-type": "rust", 
-        "package-name": "user-cli"
+        "release-type": "rust"
       }
     },
     "changelog-sections": [
       { "type": "feat", "section": "Features" },
       { "type": "fix", "section": "Bug Fixes" },
       { "type": "perf", "section": "Performance Improvements" },
-      { "type": "revert", "section": "Reverts" },
-      { "type": "docs", "section": "Documentation", "hidden": false },
-      { "type": "style", "section": "Styles", "hidden": true },
-      { "type": "chore", "section": "Miscellaneous Chores", "hidden": true },
-      { "type": "refactor", "section": "Code Refactoring", "hidden": false },
-      { "type": "test", "section": "Tests", "hidden": true },
-      { "type": "build", "section": "Build System", "hidden": false },
-      { "type": "ci", "section": "Continuous Integration", "hidden": true }
+      { "type": "docs", "section": "Documentation" },
+      { "type": "refactor", "section": "Code Refactoring" },
+      { "type": "build", "section": "Build System" },
+      { "type": "chore", "section": "Miscellaneous Chores", "hidden": true }
     ]
-}
+  }
+  
