--- a/user-cli/Cargo.toml
+++ b/user-cli/Cargo.toml
@@ -12,3 +12,4 @@ path = "src/main.rs"
 user-lib = { path = "../user-lib" }
 clap = { workspace = true }
 anyhow = { workspace = true }
+serde_json = { workspace = true }
