--- a/user-cli/Cargo.toml
+++ b/user-cli/Cargo.toml
@@ -1,8 +1,13 @@
 
 [package]
 name = "user-cli"
-version = "0.1.1"
-edition = "2021"
+version.workspace = true
+authors.workspace = true
+edition.workspace = true
+license.workspace = true
+repository.workspace = true
+homepage.workspace = true
+description = "User management CLI tool"
 
 [[bin]]
 name = "user-cli"
