--- a/user-lib/Cargo.toml
+++ b/user-lib/Cargo.toml
@@ -1,7 +1,12 @@
 [package]
 name = "user-lib"
-version = "0.1.1"
-edition = "2021"
+version.workspace = true
+authors.workspace = true
+edition.workspace = true
+license.workspace = true
+repository.workspace = true
+homepage.workspace = true
+description = "User management library"
 
 [dependencies]
 serde = { workspace = true }
