--- a/user-cli/Cargo.toml
+++ b/user-cli/Cargo.toml
@@ -1,13 +1,8 @@
 
 [package]
 name = "user-cli"
-version.workspace = true
-authors.workspace = true
-edition.workspace = true
-license.workspace = true
-repository.workspace = true
-homepage.workspace = true
-description = "User management CLI tool"
+version = "0.1.0"
+edition = "2024"
 
 [[bin]]
 name = "user-cli"
