--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,7 @@
+[package]
+name = "user-management-system"
+version = "0.1.0"
+edition = "2024"
 
 [workspace]
 resolver = "2"
@@ -5,14 +9,6 @@ members = [
     "user-lib",
     "user-cli"
 ]
-
-[workspace.package]
-version = "0.1.2"
-authors = ["Nabil Tounarti <nabil.tounarti@iex.ec>"]
-edition = "2021"
-license = "MIT"
-repository = "https://github.com/nabil-Tounarti/user-management-system"
-homepage = "https://github.com/nabil-Tounarti/user-management-system"
 
 [workspace.dependencies]
 serde = { version = "1.0", features = ["derive"] }
