--- a/user-lib/Cargo.toml
+++ b/user-lib/Cargo.toml
@@ -1,12 +1,7 @@
 [package]
 name = "user-lib"
-version.workspace = true
-authors.workspace = true
-edition.workspace = true
-license.workspace = true
-repository.workspace = true
-homepage.workspace = true
-description = "User management library"
+version = "0.1.0"
+edition = "2024"
 
 [dependencies]
 serde = { workspace = true }
