feat: add release-plz configuration

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,10 @@ members = [
     "user-lib",
     "user-cli"
 ]
+default-members = [
+    "user-lib",
+    "user-cli",
+]
 
 [workspace.dependencies]
 serde = { version = "1.0", features = ["derive"] }
