fix: disable publishing to crates.io

--- a/release-plz.toml
+++ b/release-plz.toml
@@ -4,6 +4,7 @@
 git_release_enable = true
 git_tag_enable = true
 changelog_update = true
+publish = false
 
 # Package-specific configurations
 [[package]]
