feat: update release please workflow

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,39 +1,25 @@
 name: Release Please
-
 on:
   push:
     branches:
       - main
-
+      
 permissions:
   contents: write
   issues: write
   pull-requests: write
-
 jobs:
   release-please:
     runs-on: ubuntu-latest
-    outputs:
-      release_created: ${{ steps.release.outputs.release_created }}
-      tag_name: ${{ steps.release.outputs.tag_name }}
-      sha: ${{ steps.release.outputs.sha }}
-      upload_url: ${{ steps.release.outputs.upload_url }}
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - name: Get Token
+        id: get_token
+        uses: peter-murray/workflow-application-token-action@v4
         with:
-          token: ${{ secrets.RELEASE_PLEASE_TOKEN }}
-
+          application_id: "${{ secrets.RELEASE_PLEASE_APPLICATION_ID }}"
+          application_private_key: ${{ secrets.RELEASE_PLEASE_PRIVATE_KEY }}
       - name: Run release-please
-        id: release
         uses: googleapis/release-please-action@v4
         with:
-          token: ${{ secrets.RELEASE_PLEASE_TOKEN }}
-
-      - name: Show release outputs
-        if: ${{ steps.release.outputs.release_created }}
-        run: |
-          echo "A release was created."
-          echo "Tag: ${{ steps.release.outputs.tag_name }}"
-          echo "SHA: ${{ steps.release.outputs.sha }}"
-          echo "Upload URL: ${{ steps.release.outputs.upload_url }}"
+          token: ${{ steps.get_token.outputs.token }}
+          target-branch: ${{ github.ref_name }}
