--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -23,3 +23,4 @@ jobs:
         with:
           token: ${{ steps.get_token.outputs.token }}
           target-branch: ${{ github.ref_name }}
+          always-update: true
