--- a/release-please-config.json
+++ b/release-please-config.json
@@ -3,7 +3,7 @@
   "draft-pull-request": true,
   "include-component-in-tag": true,
   "include-v-in-tag": true,
-  "separate-pull-requests": false,
+  "separate-pull-requests": true,
   "release-type": "rust",
   "packages": {
     "user-cli": {
